my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENLST/ENLST.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENLST.dml:13:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENLST.dml:16:5: error ENLST: not a list: arr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENLST.dml:21:5: error ENLST: not a list: v
